Release 1.25.0 (#166)
* Release 1.25.0

* Monitoring - Changing the feature does not load its functionalities

* EliteBase - Use monitoring for orphaned record cleaners

* Calendar - Highlight border of selected occurrence based on status

* Platform - Separate modules to etc/feature/platform in the frontend

* Platform - Move endpoints to their corresponding API lib / FE module

* Platform - index.js imports page urls

* Monitoring - Hide properties

* Monitoring - Aggregate reports before sending

* Spring Boot update

* Platform - S3 integration

* ApphubCI - WebClient instead of console application

* Authorization rework (#167)

* Authorization rework

* FE integration

* Bugfixing and missing features

* Fix UI tests

* Fix BE tests

* Local DynamoDB

* Minikube DynamoDB

* Cleanup

* TODO elimination Part I.

* TODO elimination Part II.

* Readme

* Calendar - Clicking on an image of custom table opens the image full size

* Release 1.25.0 Fixes