@@ -132,14 +132,20 @@ public class WebDriverProvider {
                 driver.close();
             }
 
-            driver.switchTo().window(handles.get(0));
-            driver.navigate().to(UrlFactory.create(serverPort.getItem(), GenericEndpoints.ERROR_PAGE));
+            driver.switchTo().window(handles.getFirst());
 
-            AwaitilityWrapper.createDefault()
-                .until(() -> driver.getCurrentUrl().endsWith(GenericEndpoints.ERROR_PAGE))
-                .assertTrue("Failed to redirect to Error page. Current url: " + driver.getCurrentUrl());
-            driver.manage()
-                .deleteAllCookies();
+            AwaitilityWrapper.retry(
+                () -> {
+                    driver.navigate().to(UrlFactory.create(serverPort.getItem(), "/api/authorization"));
+                    driver.manage()
+                        .deleteAllCookies();
+
+                    driver.navigate().to(UrlFactory.create(serverPort.getItem(), GenericEndpoints.ERROR_PAGE));
+
+                    driver.manage()
+                        .deleteAllCookies();
+                }
+            );
         } catch (Exception e) {
             log.error("Failed releasing driver. Removing from cache...");
             try {
