@@ -17,7 +17,7 @@ import com.github.saphyra.apphub.integration.ws.model.WebSocketEventName;
 import io.restassured.response.Response;
 import org.testng.annotations.Test;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
@@ -33,54 +33,54 @@ public class LeaveChatRoomTest extends BackEndTest {
     public void leaveAllianceRoom() {
         RegistrationParameters userData1 = RegistrationParameters.validParameters();
         SkyXploreCharacterModel characterModel1 = SkyXploreCharacterModel.valid();
-        UUID accessTokenId1 = IndexPageActions.registerAndLogin(getServerPort(), userData1);
-        SkyXploreCharacterActions.createOrUpdateCharacter(getServerPort(), accessTokenId1, characterModel1);
+        String accessToken1 = IndexPageActions.registerAndLogin(getServerPort(), userData1);
+        SkyXploreCharacterActions.createOrUpdateCharacter(getServerPort(), accessToken1, characterModel1);
         UUID userId1 = DatabaseUtil.getUserIdByEmail(userData1.getEmail());
 
         RegistrationParameters userData2 = RegistrationParameters.validParameters();
         SkyXploreCharacterModel characterModel2 = SkyXploreCharacterModel.valid();
-        UUID accessTokenId2 = IndexPageActions.registerAndLogin(getServerPort(), userData2);
-        SkyXploreCharacterActions.createOrUpdateCharacter(getServerPort(), accessTokenId2, characterModel2);
+        String accessToken2 = IndexPageActions.registerAndLogin(getServerPort(), userData2);
+        SkyXploreCharacterActions.createOrUpdateCharacter(getServerPort(), accessToken2, characterModel2);
         UUID userId2 = DatabaseUtil.getUserIdByEmail(userData2.getEmail());
 
-        Map<UUID, ApphubWsClient> gameWsClients = SkyXploreFlow.startGame(getServerPort(), GAME_NAME, new Player(accessTokenId1, userId1), new Player(accessTokenId2, userId2));
+        Map<String, ApphubWsClient> gameWsClients = SkyXploreFlow.startGame(getServerPort(), GAME_NAME, new Player(accessToken1, userId1), new Player(accessToken2, userId2));
 
-        leaveAllianceRoom(accessTokenId1);
-        leaveGeneralRoom(accessTokenId1);
-        chatRoomNotFound(accessTokenId1);
-        leaveChatRoom(characterModel1, accessTokenId1, userId1, accessTokenId2, gameWsClients);
+        leaveAllianceRoom(accessToken1);
+        leaveGeneralRoom(accessToken1);
+        chatRoomNotFound(accessToken1);
+        leaveChatRoom(characterModel1, accessToken1, userId1, accessToken2, gameWsClients);
     }
 
-    private static void leaveAllianceRoom(UUID accessTokenId1) {
-        Response leaveAllianceRoomResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessTokenId1, "alliance");
+    private static void leaveAllianceRoom(String accessToken1) {
+        Response leaveAllianceRoomResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessToken1, "alliance");
         verifyForbiddenOperation(leaveAllianceRoomResponse);
     }
 
-    private static void leaveGeneralRoom(UUID accessTokenId1) {
-        Response leaveGeneralRoomResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessTokenId1, "general");
+    private static void leaveGeneralRoom(String accessToken1) {
+        Response leaveGeneralRoomResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessToken1, "general");
         verifyForbiddenOperation(leaveGeneralRoomResponse);
     }
 
-    private static void chatRoomNotFound(UUID accessTokenId1) {
-        Response chatRoomNotFoundResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessTokenId1, "unknown-chat-room");
+    private static void chatRoomNotFound(String accessToken1) {
+        Response chatRoomNotFoundResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessToken1, "unknown-chat-room");
         verifyNotTranslatedNotFound(chatRoomNotFoundResponse, 404);
     }
 
-    private static void leaveChatRoom(SkyXploreCharacterModel characterModel1, UUID accessTokenId1, UUID userId1, UUID accessTokenId2, Map<UUID, ApphubWsClient> gameWsClients) {
+    private static void leaveChatRoom(SkyXploreCharacterModel characterModel1, String accessToken1, UUID userId1, String accessToken2, Map<String, ApphubWsClient> gameWsClients) {
         CreateChatRoomRequest createChatRoomRequest = CreateChatRoomRequest.builder()
             .roomTitle(ROOM_TITLE)
-            .members(Arrays.asList(userId1))
+            .members(List.of(userId1))
             .build();
-        SkyXploreGameChatActions.createChatRoom(getServerPort(), accessTokenId2, createChatRoomRequest);
-        String roomId = gameWsClients.get(accessTokenId2).awaitForEvent(WebSocketEventName.SKYXPLORE_GAME_CHAT_ROOM_CREATED)
+        SkyXploreGameChatActions.createChatRoom(getServerPort(), accessToken2, createChatRoomRequest);
+        String roomId = gameWsClients.get(accessToken2).awaitForEvent(WebSocketEventName.SKYXPLORE_GAME_CHAT_ROOM_CREATED)
             .map(event -> event.getPayloadAs(ChatRoomCreatedMessage.class))
             .map(ChatRoomCreatedMessage::getRoomId)
             .orElseThrow(() -> new RuntimeException("ChatRoom was not created"));
-        Response leaveChatRoomResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessTokenId1, roomId);
+        Response leaveChatRoomResponse = SkyXploreGameChatActions.getLeaveChatRoomResponse(getServerPort(), accessToken1, roomId);
 
         assertThat(leaveChatRoomResponse.getStatusCode()).isEqualTo(200);
 
-        SystemMessage message = gameWsClients.get(accessTokenId2).awaitForEvent(WebSocketEventName.SKYXPLORE_GAME_USER_LEFT)
+        SystemMessage message = gameWsClients.get(accessToken2).awaitForEvent(WebSocketEventName.SKYXPLORE_GAME_USER_LEFT)
             .map(event -> event.getPayloadAs(SystemMessage.class))
             .orElseThrow(() -> new RuntimeException("UserLeft message did not arrive"));
 
